Closed Bug 1209268 Opened 9 years ago Closed 9 years ago

Don't assume D3D11CreateDevice() gives back non-null devices

Categories

(Core :: Graphics, defect)

40 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla45
Tracking Status
firefox45 --- fixed

People

(Reporter: dvander, Assigned: dvander)

Details

Attachments

(2 files, 1 obsolete file)

When we create anything other than a non-WARP compositor device, we assume D3D11CreateDevice() returning S_OK means that the resulting pointer is non-null. According to crash-stats for InitD3D11Devices, that's not true.
Attached patch fix (obsolete) — Splinter Review
Attachment #8666950 - Flags: review?(milan)
Attached patch fixSplinter Review
Wrong patch.
Attachment #8666950 - Attachment is obsolete: true
Attachment #8666950 - Flags: review?(milan)
Attachment #8666954 - Flags: review?(milan)
Attached patch fixSplinter Review
Err, and a typo fix.
Attachment #8666954 - Attachment is obsolete: true
Attachment #8666954 - Flags: review?(milan)
Attachment #8666955 - Flags: review?(milan)
Comment on attachment 8666954 [details] [diff] [review]
fix

Review of attachment 8666954 [details] [diff] [review]:
-----------------------------------------------------------------

r+ with that typo fixed.

::: gfx/thebes/gfxWindowsPlatform.cpp
@@ +2198,5 @@
>    if (!AttemptD3D11ContentDeviceCreationHelper(adapter, hr)) {
>      return FeatureStatus::Crashed;
>    }
>  
> +  if (FAILED(hr) || mD3D11ContentDevice) {

I imagine this is !mD3D11ContentDevice instead?
Attachment #8666954 - Attachment is obsolete: false
Attachment #8666955 - Flags: review?(milan) → review+
https://hg.mozilla.org/mozilla-central/rev/2886299d081c
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: