Don't assume D3D11CreateDevice() gives back non-null devices. (bug 1209268, r=milan)