gfx/thebes/gfxWindowsPlatform.cpp
@@ -2210,7 +2210,7 @@ gfxWindowsPlatform::AttemptWARPDeviceCreation()
     return FeatureStatus::Crashed;
   }
 
-  if (FAILED(hr)) {
+  if (FAILED(hr) || !mD3D11Device) {
     // This should always succeed... in theory.
     gfxCriticalError() << "Failed to initialize WARP D3D11 device! " << hexa(hr);
     return FeatureStatus::Failed;
@@ -2283,7 +2283,7 @@ gfxWindowsPlatform::AttemptD3D11ContentDeviceCreation()
     return FeatureStatus::Crashed;
   }
 
-  if (FAILED(hr)) {
+  if (FAILED(hr) || !mD3D11ContentDevice) {
     return FeatureStatus::Failed;
   }
 
@@ -2327,7 +2327,7 @@ gfxWindowsPlatform::AttemptD3D11ImageBridgeDeviceCreation()
     return FeatureStatus::Crashed;
   }
 
-  if (FAILED(hr)) {
+  if (FAILED(hr) || !mD3D11ImageBridgeDevice) {
     return FeatureStatus::Failed;
   }
 
@@ -2691,7 +2691,7 @@ gfxWindowsPlatform::CreateD3D11DecoderDevice()
     return nullptr;
   }
 
-  if (FAILED(hr) || !DoesD3D11DeviceWork()) {
+  if (FAILED(hr) || !device || !DoesD3D11DeviceWork()) {
     return nullptr;
   }
 
